--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -386,6 +386,7 @@ data:
         min_brightness: 1
         max_brightness: 255
         # Night mode settings
+        night_mode_enabled: true
         night_start_time: "07:00"
         night_end_time: "05:45"
         night_color_mode: scene
