feat(dns): scale BIND9 to 3 replicas with anti-affinity and rolling updates
- Increase replicas from 1 to 3 for high availability
- Add pod anti-affinity rules to spread pods across different hosts
- Configure rolling update strategy (maxUnavailable: 1, maxSurge: 1)
- Add resource requests and limits for proper scheduling
- Enable rolling restarts without DNS downtime
- Add documentation for monitoring and troubleshooting

This ensures DNS service continues during updates and provides
fault tolerance across multiple nodes.

--- a/gitops/infra/dns/deployment.yaml
+++ b/gitops/infra/dns/deployment.yaml
@@ -6,7 +6,12 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
-  replicas: 1
+  replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
       app: bind9
@@ -15,6 +20,18 @@ spec:
       labels:
         app: bind9
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - bind9
+              topologyKey: kubernetes.io/hostname
       initContainers:
       - name: init-zones
         image: busybox
@@ -60,6 +77,13 @@ spec:
         - name: dns-udp
           containerPort: 53
           protocol: UDP
+        resources:
+          requests:
+            cpu: 50m
+            memory: 128Mi
+          limits:
+            cpu: 200m
+            memory: 256Mi
         volumeMounts:
         - name: conf
           mountPath: /etc/bind
