feat(dns): scale external-dns to 3 replicas with anti-affinity
- Increase replicas from 1 to 3 for high availability
- Add pod anti-affinity rules to spread pods across different hosts
- Configure rolling update strategy (maxUnavailable: 1, maxSurge: 1)
- Enable pod disruption budget for better availability
- Ensure external-dns can handle rolling restarts without downtime

--- a/gitops/infra/external-dns/values.yaml
+++ b/gitops/infra/external-dns/values.yaml
@@ -2,7 +2,7 @@
 # Official external-dns chart configuration for BIND9 integration
 
 # Replica count
-replicaCount: 1
+replicaCount: 3
 
 # Service account configuration
 resources:
@@ -21,8 +21,29 @@ serviceMonitor:
 
 # Pod disruption budget
 podDisruptionBudget:
-  enabled: false
+  enabled: true
   minAvailable: 1
+
+# Rolling update strategy
+strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxUnavailable: 1
+    maxSurge: 1
+
+# Pod anti-affinity for high availability
+affinity:
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+    - weight: 100
+      podAffinityTerm:
+        labelSelector:
+          matchExpressions:
+          - key: app.kubernetes.io/name
+            operator: In
+            values:
+            - external-dns
+        topologyKey: kubernetes.io/hostname
 
 # External DNS configuration
 provider:
