--- a/gitops/infra/tailscale/namespace.yaml
+++ b/gitops/infra/tailscale/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: tailscale
+  name: default
   annotations:
     argocd.argoproj.io/sync-wave: "0"
