--- a/gitops/infra/tailscale/deployment.yaml
+++ b/gitops/infra/tailscale/deployment.yaml
@@ -9,6 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: tailscale
+  namespace: default
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
@@ -30,6 +31,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: tailscale
+  namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
