--- a/gitops/infra/tailscale/deployment.yaml
+++ b/gitops/infra/tailscale/deployment.yaml
@@ -5,42 +5,41 @@ metadata:
   name: tailscale
   namespace: default
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: tailscale
-  namespace: default
-rules:
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get", "create", "update", "patch"]
-- apiGroups: [""]
-  resources: ["events"]
-  verbs: ["get", "create", "patch"]
-- apiGroups: [""]
-  resources: ["nodes"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: [""]
-  resources: ["services"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: tailscale
-  namespace: default
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: tailscale
-subjects:
-- kind: ServiceAccount
-  name: tailscale
-  namespace: default
----
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRole
+# metadata:
+#   name: tailscale
+#   namespace: default
+# rules:
+# - apiGroups: [""]
+#   resources: ["secrets"]
+#   verbs: ["get", "create", "update", "patch"]
+# - apiGroups: [""]
+#   resources: ["events"]
+#   verbs: ["get", "create", "patch"]
+# - apiGroups: [""]
+#   resources: ["nodes"]
+#   verbs: ["get", "list", "watch"]
+# - apiGroups: [""]
+#   resources: ["services"]
+#   verbs: ["get", "list", "watch"]
+# - apiGroups: [""]
+#   resources: ["pods"]
+#   verbs: ["get", "list", "watch"]
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: tailscale
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: tailscale
+# subjects:
+# - kind: ServiceAccount
+#   name: tailscale
+#   namespace: default
+# ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
